# graph-explorer

./: .gitignore  Dockerfile.client  Dockerfile.server  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
client/: biome.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  main.tsx  types.ts  utils.ts
client/src/components/: NodeData.tsx
client/src/hooks/: useCameraUtils.ts
graph-converter/: README.md  rdf-converter.ts
server/: housemd.rdf  pyproject.toml
server/app/: graph.py  main.py
src/: App.tsx
src/components/: NodeData.tsx
